# haskell-platform

./: .gitignore  .travis.yml  BUILD.md  LICENSE  NOTES-2010.1.0.0  NOTES-2010.2.0.0  NOTES-2012.2.0.0  NOTES-2012.3.0.0  NOTES-2012.4.0.0  NOTES-2013.2  README  README.md  RELEASE  Setup.hs  find-bindist  haskell-platform.cabal  new-platform.sh  platform-init  platform.sh  server  travis-setup.sh  windows-platform.sh
download-website/: Makefile  changelog.html  changelog.markdown  contents.html  contents.markdown  ghc-clang-wrapper  header.txt  hp.rss  index.html  index.markdown  linux.html  linux.markdown  mac.html  mac.markdown  nominolo.css  prior.html  prior.markdown  style-info.css  style-uncompressed.css  style.css  windows.html  windows.markdown
download-website/new/: Makefile  contents.html  contents.markdown  index.html  linux.html  linux.markdown  mac.html  mac.markdown  mac.tex  style-info.css  style.css  windows.html  windows.markdown
hptool/: hptool.cabal
hptool/os-extras/osx/: installer.dist  installer.dist.mu
hptool/os-extras/osx/doc/: start.html  start.html.mu
hptool/os-extras/osx/installer-resources/: welcome.rtf
hptool/os-extras/osx/installer-scripts/: postinstall  postinstall.mu
hptool/os-extras/posix/installer/: install-haskell-platform.sh  install-haskell-platform.sh.mu
hptool/os-extras/win/: CreateInternetShortcut.nsh  LICENSE  fixGHC7.8.3.sh  fixHP2014.2.0.0_RC1.sh
hptool/os-extras/win/templates/: Bootstrapper.nsi.mu  CommonHP.nsh.mu  Extralibs.nsi.mu  GHC.nsi.mu  MSys.nsi.mu  Nsisfile.nsi.mu  SubInstall.nsi.mu  index.html.mu  inst.dat.mu  uninst.dat.mu
hptool/os-extras/win/test/: glut.hs  regex.hs
hptool/src/: CLArgs.hs  Config.hs  Dirs.hs  GhcDist.hs  HaddockMaster.hs  LocalCommand.hs  Main.hs  OS.hs  Package.hs  Paths.hs  PlatformDB.hs  ReleaseFiles.hs  Releases.hs  Releases2012.hs  Releases2013.hs  Releases2014.hs  Releases2015.hs  Releases2016.hs  Releases2017.hs  Releases2018.hs  Releases2019.hs  SourceTarball.hs  Target.hs  Templates.hs  Types.hs  Utils.hs  Website.hs
hptool/src/Internal/: CLArgs.hs
hptool/src/OS/: Internal.hs  Mac.hs  Posix.hs  Win.hs
hptool/src/OS/Win/: WinNsis.hs  WinPaths.hs  WinRules.hs  WinUtils.hs
hptool/templates/: haskell-platform.cabal.mu
hptool/tests/: UnitTests.hs
hptool/tests/UnitTests/: CLArgs.hs
notes/: BUILD-NEW  BUILD-OLD  NOTES-2010.2.0.0  NOTES-2012.2.0.0  NOTES-2012.4.0.0  NOTES-2014  NOTES-2015  RELEASE  building-ghc-docker  building-ghc-os-x  cabal-layouts  cabal.conf.1.18.0.4.default
src/: Build.hs  README
src/generic/: Build.hs  GenImports.hs  prepare.sh
src/generic-tarball/: Makefile  build.sh  configure  install.sh
src/generic-tarball/scripts/: install.sh
src/generic/tarball/: Makefile  README  aclocal.m4  configure  configure.ac
src/generic/tarball/scripts/: build.sh  common.sh  config.in  install.sh  package.sh  versions
src/macos/: Makefile  PatchSettings.hs  README  UninstallHS.hs  cabal.wrap  start.html
src/macos/Platform.pmdoc/: 01ghc-contents.xml  01ghc.xml  02haskell-contents.xml  02haskell.xml  index.xml
src/win32/: ANNOUNCEMENT  LICENSE  NEWS  Nsisfile.nsi  README  TODO  bootstrap.py  gen_list_files_for_nsis.py  ghc-install.sh  haddock-gen-index.py  parse-cabal.py  recache.py
website/: README.md  changelog.html.mu  contents.html.mu  download.html.mu  ghc-clang-wrapper  index.html.mu  linux.html.mu  mac.html.mu  prior.html.mu  style.css  windows.html.mu
website/new-site/: contents.html.mu  download.html.mu  linux.html.mu  mac.html.mu  prior.html.mu  windows.html.mu
website/new-site/js/: contents.js  download.js
website/new-site/stylesheets/: custom.css  download.css  new-hl.min.css
website/new-site/stylesheets/fonts/Haskell/fonts/: style.css
website/new-site/stylesheets/fonts/Haskell/fonts/fonts/: Haskell.eot
website/original/: changelog.html.mu  contents.html.mu  index.html.mu  linux.html.mu  mac.html.mu  prior.html.mu  source.html.mu  style.css  windows.html.mu
website/original/templates/: header.mu
website/plan-a/: contents.html.mu  download-plan-a2.html.mu  download.html.mu  linux.html.mu  mac.html.mu  platform-freeze-config.mu  prior.html.mu  windows.html.mu
website/plan-a/js/: download.js
website/plan-b/: contents.html.mu  hp.html.mu  linux.html.mu  mac.html.mu  prior.html.mu  source.html.mu  template.html.mu  windows.html.mu
website/plan-b/css/: haskell.font.css  hl.css  style2.css
website/plan-b/css/fonts/: Haskell.eot
website/plan-b/templates/: footer.mu  header.mu
website/stylesheets/: contents.css  download.css
website/stylesheets/fonts/Haskell/fonts/: selection.json
website/templates/: downloads-root.mu  footer.mu  haskell-org-root.mu  navbar.mu
website/templates/horg/: epilogue.mu  footer.mu  header.mu  packages.html.mu  topbody.mu
website/templates/new-site/: download-banner.html.mu  download-os-sections.html.mu  footer.mu  head.mu  navbar.mu
website/templates/plan-a/: download-banner.html.mu  download-options.html.mu  download-os-sections.html.mu  footer.mu  head.mu  navbar.mu
