name:                haskell-platform
version:             2009.2.0.2
homepage:            http://haskell.org/haskellwiki/Haskell_Platform
license:             BSD3
license-file:        LICENSE
author:              libraries@haskell.org
maintainer:          haskell-platform@projects.haskell.org
category:            System
synopsis:            The Haskell Platform
description:
    The Haskell Platform (HP) is the blessed set of libraries and tools on
    which to build further Haskell libraries and applications. It is
    intended to provide a comprehensive, stable, and quality tested base for
    Haskell projects to work from.
    .
    This version specifies the following additional developer tools be
    installed, for a system to be in full compliance:
    . 
    * cabal-install
    * alex
    * happy
    * haddock

cabal-version:       >= 1.6
build-type:          Custom
tested-with:         GHC ==6.10.4

library
  build-depends:
    -- ghc 6.10.4
    -- core libraries: implicitly provided by ghc
    -- array               ==0.2.0.0 
    -- base                ==4.1.0.0 and ==3.0.3.1
    -- bytestring          ==0.9.1.4
    -- Cabal               ==1.6.0.3
    -- containers          ==0.2.0.1
    -- directory           ==1.0.0.3
    -- filepath            ==1.1.0.2
    -- ghc-prim            ==0.1.0.0
    -- haskell98           ==1.0.1.0
    -- hpc                 ==0.5.0.3
    -- integer             ==0.1.0.1
    -- old-locale          ==1.0.0.1
    -- old-time            ==1.0.0.2
    -- packedstring        ==0.1.0.1
    -- pretty              ==1.0.1.0
    -- process             ==1.0.1.1
    -- random              ==1.0.0.1
    -- syb                 ==0.1.0.1
    -- template-haskell    ==2.3.0.1
    -- unix                ==2.3.2.0
    -- Win32               ==2.2.0.0

    -- Libraries in addition to what GHC provides:
    cgi           ==3001.1.7.1,
    fgl           ==5.4.2.2,
    editline      ==0.2.1.0,
    GLUT          ==2.1.1.2,
    haskell-src   ==1.0.1.3,
    html          ==1.0.1.2,
    HUnit         ==1.2.0.3,
    mtl           ==1.1.0.2,
    network       ==2.2.1.4,
    OpenGL        ==2.2.1.1,
    parallel      ==1.1.0.1,
    parsec        ==2.1.0.1,
    QuickCheck    ==1.2.0.0,
    regex-base    ==0.72.0.2,
    regex-compat  ==0.71.0.1,
    regex-posix   ==0.72.0.3,
    stm           ==2.1.1.2,
    time          ==1.1.2.4,
    xhtml         ==3000.2.0.1,
    zlib          ==0.5.0.0,
    HTTP          ==4000.0.6

  -- Depending on programs does not work, they are not registered
  -- We list them for convenience
  build-tools:
    cabal-install ==0.6.2,
    alex          ==2.3.1,
    happy         ==1.18.4
--    haddock       ==2.4.2

