name:                haskell-platform
version:             2010.2.0.0
homepage:            http://haskell.org/platform
license:             BSD3
license-file:        LICENSE
author:              libraries@haskell.org
maintainer:          haskell-platform@projects.haskell.org
category:            System
synopsis:            The Haskell Platform
description:
    The Haskell Platform (HP) is the blessed set of libraries and tools on
    which to build further Haskell libraries and applications. It is
    intended to provide a comprehensive, stable, and quality tested base for
    Haskell projects to work from.
    .
    This version specifies the following additional developer tools be
    installed, for a system to be in full compliance:
    . 
    * cabal-install
    * alex
    * happy
    * haddock

cabal-version:       >= 1.6
build-type:          Custom
tested-with:         GHC ==6.12.3

library
  build-depends:
    -- ghc 6.12.3
    -- Core libraries: provided by every ghc installation
    -- We don't include "non-API" packages here.
    -- array                    ==0.3.0.1 
    -- base                     ==4.2.0.2 and ==3.0.3.2
    -- bytestring               ==0.9.1.7
    -- Cabal                    ==1.8.0.6
    -- containers               ==0.3.0.0
    -- directory                ==1.0.1.1
    -- extensible-exceptions    ==0.1.1.1
    -- filepath                 ==1.1.0.4
    -- ghc-prim-0.2.0.0
    -- haskell98                ==1.0.1.1
    -- hpc                      ==0.5.0.5
    -- old-locale               ==1.0.0.2
    -- old-time                 ==1.0.0.5
    -- pretty                   ==1.0.1.1
    -- process                  ==1.0.1.3
    -- random                   ==1.0.0.2
    -- syb                      ==0.1.0.2
    -- template-haskell         ==2.4.0.1
    -- time                     ==1.1.4
    -- unix                     ==2.4.0.2
    -- Win32                    ==2.2.0.1 -- removed??

    -- Libraries in addition to what GHC provides:
    cgi                         ==3001.1.7.3,
    fgl                         ==5.4.2.3,
    GLUT                        ==2.1.2.1,
    -- NOTE
    haskell-src                 ==1.0.1.3,
    html                        ==1.0.1.2,
    HUnit                       ==1.2.2.1,
    mtl                         ==1.1.0.2,
    network                     ==2.2.1.7,
    OpenGL                      ==2.2.3.0,
    -- NOTE
    parallel                    ==2.2.0.1,
    parsec                      ==2.1.0.1,
    -- NOTE, not using parsec 3
    QuickCheck                  ==2.1.1.1,
    regex-base                  ==0.93.2,
    regex-compat                ==0.93.1,
    regex-posix                 ==0.94.2,
    stm                         ==2.1.2.1,
    xhtml                       ==3000.2.0.1,
    zlib                        ==0.5.2.0,
    HTTP                        ==4000.0.9,
    deepseq                     ==1.1.0.0

  -- Depending on programs does not work, they are not registered
  -- We list them to help distro packaging.
  build-tools:
    cabal-install ==0.8.2,
    alex          ==2.3.3,
    happy         ==1.18.5
    -- haddock       ==2.7.2 -- valid, but needs ghc-paths

