Name:            hptool
Version:         0.1
Author:          Mark Lentczner
Maintainer:      mark@glyphic.com
Category:        Utility
Build-type:      Simple
Cabal-version:   >=1.8
Synopsis:        Haskell Platform Utility

Data-files:
  templates/*.cabal.mu

Executable hptool
  Main-is: Main.hs
  Other-Modules:
    Config,
    Dirs
    GhcDist,
    HaddockMaster,
    LocalCommand,
    Main,
    OS,
    OS.Internal,
    OS.Mac,
    OS.Posix,
    OS.Win
    OS.Win.WinNsis,
    OS.Win.WinPaths,
    OS.Win.WinRules,
    OS.Win.WinUtils,
    Package,
    Paths,
    PlatformDB,
    Releases,
    Releases2012,
    Releases2013,
    Releases2014,
    Releases2015,
    SourceTarball,
    Target,
    Templates,
    Types,
    Utils,
    Website

  hs-source-dirs: src

  Build-depends:
    Cabal,
    base,
    bytestring,
    containers,
    directory,
    hastache >=0.6.0,
    shake >= 0.14,
    split,
    text,
    transformers

  ghc-options: -Wall -fwarn-tabs
