Cabal-version:   2.2
Name:            HPTool
Version:         0.1
Author:          Mark Lentczner
Maintainer:      gershomb@gmail.com
Category:        Utility
Build-type:      Simple
Synopsis:        Haskell Platform Utility

Data-files:
  templates/*.cabal.mu

Library
  Exposed-Modules:
    CLArgs,
    Internal.CLArgs,
    Config,
    Dirs
    GhcDist,
    HaddockMaster,
    LocalCommand,
    OS,
    OS.Internal,
    OS.Mac,
    OS.Posix,
    OS.Win
    OS.Win.WinNsis,
    OS.Win.WinPaths,
    OS.Win.WinRules,
    OS.Win.WinUtils,
    Package,
    Paths,
    PlatformDB,
    ReleaseFiles,
    Releases,
    Releases2012,
    Releases2013,
    Releases2014,
    Releases2015,
    Releases2016,
    Releases2017,
    Releases2018,
    SourceTarball,
    Target,
    Templates,
    Types,
    Utils,
    Website
  Build-depends:
    Cabal >=2.2.0,
    base,
    bytestring,
    containers,
    directory,
    hastache >=0.6.0,
    shake >= 0.16,
    split,
    text,
    transformers,
    unix-compat,
    filepath
  hs-source-dirs: src
  Default-Language: Haskell2010

Executable hptool
  Main-is: Main.hs
  hs-source-dirs: src
  Other-Modules:
    CLArgs,
    Internal.CLArgs,
    Config,
    Dirs
    GhcDist,
    HaddockMaster,
    LocalCommand,
    OS,
    OS.Internal,
    OS.Mac,
    OS.Posix,
    OS.Win
    OS.Win.WinNsis,
    OS.Win.WinPaths,
    OS.Win.WinRules,
    OS.Win.WinUtils,
    Package,
    Paths,
    PlatformDB,
    ReleaseFiles,
    Releases,
    Releases2012,
    Releases2013,
    Releases2014,
    Releases2015,
    Releases2016,
    Releases2017,
    Releases2018,
    SourceTarball,
    Target,
    Templates,
    Types,
    Utils,
    Website
  Build-depends:
    Cabal,
    base,
    bytestring,
    containers,
    directory,
    hastache >=0.6.0,
    HPTool,
    shake >= 0.16,
    split,
    text,
    transformers,
    unix-compat,
    filepath
  ghc-options: -Wall -fwarn-tabs
  Default-Language: Haskell2010


test-suite unit-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  other-modules:
    UnitTests.CLArgs
  main-is: UnitTests.hs
  build-depends:
    base,
    directory,
    HPTool,
    HUnit,
    QuickCheck,
    tasty,
    tasty-hunit,
    tasty-hspec,
    transformers
  ghc-options: -Wall
  Default-Language: Haskell2010
